demos: Add a demo of Google Tasks

This is a simple read-only demo of the Tasks service, similar to the
Calendar demo.

https://bugzilla.gnome.org/show_bug.cgi?id=775813